# gen_tso

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: quarto-publish.yml  quarto-render.yml
data/: nea_aliases.txt  nea_data.txt  throughputs_miri_lrsslitless.pickle
docs/: .gitignore  Makefile  _config.py  _quarto.yml  _quartodoc.yml  get_started.qmd  index.qmd  install.qmd  notebooks.qmd  requirements.txt  run_pandeia.qmd  select_planet_model.qmd  select_target.qmd  styles.css  tutorials.qmd  tutorials_fetch_jwst_programs.qmd  tutorials_jwst_miri_programs.qmd  tutorials_jwst_programs.qmd  tutorials_jwst_successful_programs.qmd  tutorials_tso_optimize.qmd  tutorials_tso_post_processing.qmd  tutorials_tso_run.qmd
docs/images/: select_instrument.webm  select_target.webm  select_transit_depth.webm  target_acquisition.webm
gen_tso/: __init__.py  __main__.py  app_utils.py  custom_shiny.py  export_script.py  gen_tso_app.py  navset_jwst.py  pandeia_interface.py  source_catalog.py  utils.py  version.py  viewer_popovers.py
gen_tso/catalogs/: __init__.py  catalog_utils.py  catalogs.py  fetch_catalogs.py  fetch_programs.py  source_catalog.py  target.py  utils.py
gen_tso/custom_shiny/: __init__.py  custom_shiny.py
gen_tso/data/: base_theme.css  flux_rates_miri.pickle  flux_rates_nircam.pickle  flux_rates_niriss.pickle  flux_rates_nirspec.pickle  last_updated_nea.txt  last_updated_trexolist.txt  nea_aliases.txt  nea_data.txt  planets_per_program.txt  style.css  target_aliases.txt  tess_data.txt  throughputs_niriss_target_acq.pickle  throughputs_nirspec_bots.pickle  trexolists.csv  user_planet_data.txt
gen_tso/data/models/: .gitignore
gen_tso/data/programs/: jwst_tso_programs.csv  planets_per_program.json  planets_per_program.txt
gen_tso/data/throughputs/: throughputs_miri_imaging_ts.pickle  throughputs_miri_lrsslit.pickle  throughputs_miri_lrsslitless.pickle  throughputs_miri_mrs_ts.pickle  throughputs_miri_target_acq.pickle  throughputs_nircam_lw_ts.pickle  throughputs_nircam_lw_tsgrism.pickle  throughputs_nircam_ssgrism.pickle  throughputs_nircam_sw_ts.pickle  throughputs_nircam_sw_tsgrism.pickle  throughputs_nircam_target_acq.pickle  throughputs_niriss_soss.pickle  throughputs_niriss_target_acq.pickle  throughputs_nirspec_bots.pickle  throughputs_nirspec_target_acq.pickle
gen_tso/pandeia_io/: __init__.py  pandeia_calculation.py  pandeia_defaults.py  pandeia_interface.py  pandeia_setup.py
gen_tso/plotly_io/: __init__.py  plots.py
tests/: test_catalogs.py  test_catalogs_fetch.py  test_catalogs_utils.py  test_pandeia_calculation.py  test_pandeia_defaults.py  test_pandeia_interface.py  test_perform_calculation.py  test_utils.py
tests/mocks/: make_mocks.py  perform_calculation_miri_mrs_ts.pkl  perform_calculation_nircam_lw_tsgrism.pkl  perform_calculation_nircam_ssgrism.pkl  trexolists.csv  tso_calculation_miri_mrs_ts.pkl  tso_calculation_nircam_lw_tsgrism.pkl  tso_calculation_nircam_ssgrism.pkl
