[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "gen_tso"
description = "A general ETC for time-series observations"
readme = "README.md"
license = { file = "LICENSE" }

#https://packaging.python.org/en/latest/guides/single-sourcing-package-version/
dynamic = ["version"]

requires-python = ">=3.8"
authors = [
  {name = "Patricio Cubillos", email = "pcubillos@fulbrightmail.org"}
]
dependencies = [
    'shiny>=1.0.0',
    'pandeia.engine>=4.0.0',
    'scipy',
    'numpy>=1.17',
    'requests>=2.19.1',
    'astropy>=5.3.0',
    'astroquery',
    'pandas',
    'plotly',
    'shinywidgets',
    'faicons',
    'prompt_toolkit>=3.0.0',
    'pyratbay>=2.0.0.b3',
]

[project.urls]
"Homepage" = "https://github.com/pcubillos/gen_tso"

#https://setuptools.pypa.io/en/stable/userguide/entry_point.html#console-scripts
[project.scripts]
tso = "gen_tso.__main__:main"

[tool.setuptools.dynamic]
version = {attr = "gen_tso.version.__version__"}

[tool.setuptools]
include-package-data = true

#https://setuptools.pypa.io/en/stable/userguide/package_discovery.html
[tool.setuptools.packages]
find = {namespaces = false}  # Take only folders with a __init__.py file

#https://setuptools.pypa.io/en/stable/userguide/datafiles.html
#[tool.setuptools.package-data]
#"gen_tso.data" = ["*"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:datetime.datetime.utcfromtimestamp:DeprecationWarning",
]
