[build-system]
requires = [
    "setuptools>=77.0.3",
]
build-backend = "setuptools.build_meta"

[project]
name = "gen_tso"
description = "A general ETC for time-series observations"
readme = "README.md"
license = "GPL-2.0-or-later"
license-files = [ "LICENSE" ]

#https://packaging.python.org/en/latest/guides/single-sourcing-package-version/
dynamic = ["version"]

requires-python = ">=3.9"
authors = [
  {name = "Patricio Cubillos", email = "pcubillos@fulbrightmail.org"}
]
dependencies = [
    'shiny>=1.0.0',
    'pandeia.engine>=2025.7',
    'scipy>=1.14.1',
    'numpy>=2.0',
    'requests>=2.19.1',
    'astropy>=5.3.0',
    'astroquery>=0.4.8',
    'pandas',
    'plotly',
    'shinywidgets',
    'faicons',
    'prompt_toolkit>=3.0.0',
    'pyratbay>=2.0.0.b3',
]

[project.urls]
"Homepage" = "https://github.com/pcubillos/gen_tso"

#https://setuptools.pypa.io/en/stable/userguide/entry_point.html#console-scripts
[project.scripts]
tso = "gen_tso.__main__:main"

[tool.setuptools.dynamic]
version = {attr = "gen_tso.version.__version__"}

[tool.setuptools]
include-package-data = true

#https://setuptools.pypa.io/en/stable/userguide/package_discovery.html
[tool.setuptools.packages]
find = {namespaces = false}  # Take only folders with a __init__.py file

#https://setuptools.pypa.io/en/stable/userguide/datafiles.html
[tool.setuptools.package-data]
"gen_tso.data" = [
    "base_theme.css",
    "last_updated_*",
    "nea_data.txt",
    "tess_data.txt",
    "target_aliases.txt",
    "trexolists.csv",
    "flux_rates_*.pickle",
    "user_planet_data.txt",
]
"gen_tso.data.models" = ["*"]
"gen_tso.data.images" = ["*"]
"gen_tso.data.programs" = ["jwst_tso_programs.csv", "planets_per_program.json"]
"gen_tso.data.throughputs" = ["*"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:datetime.datetime.utcfromtimestamp:DeprecationWarning",
]
